# PETROLEUM-RAG

./: .gitignore  ReadME.md  main_taller.ipynb  pyproject.toml
data/petroleum_corpus/: corpus_report.md
data/petroleum_corpus/clean/: chunks.jsonl  documents.jsonl
data/petroleum_corpus/raw/: artificial-lift-8a82272838.html  drilling-fluids-16fc108527.html  natural-gas-basics-f3c4bff5cc.html  oil-basics-d3bc5a02f7.html  oil-basics-ef4a551e35.html  oil-supply-and-production-15870d55ca.html  oil-supply-and-production-4dc4bf5ea7.html  permeability-867a709079.html  petroleum-systems-7fd218b8cd.html  pore-pressure-52a0c10187.html  porosity-3e30319c22.html  refining-1be318e7c5.html  refining-7f650afa5b.html  well-logging-28d854028b.html
data/sources/: petroleum_corpus_sources.json  rag_test_questions.json
scripts/: build_petroleum_corpus.py
