[project]
name = "petroleum-rag"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pypdf>=4.0.0",
    "tqdm>=4.66.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "sentence-transformers>=2.7.0",
    "faiss-cpu>=1.8.0",
    "transformers>=4.40.0",
    "torch>=2.2.0",
    "ipykernel>=6.29.0",
    "numpy>=1.26.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []